--- a/css/index.css
+++ b/css/index.css
@@ -148,6 +148,7 @@
 	top: 0;
 	font-size: 20px;
 	border-top: 1px solid #c2c2c2;
+	padding: 0 20px;
 }
 .imginner1{
 	width: 50%;
@@ -183,27 +184,24 @@
 	margin-top: 20px;
 }
 .jineng_xian1{
-	width: 80%;
+	width: 0;
 	height: 100%;
-	background-color: #c2c2c2;
-}
-.jineng_xian1:hover,.jineng_xian2:hover,.jineng_xian3:hover,.jineng_xian4:hover{
-	background-color: black;
+	background-color: #999;
 }
 .jineng_xian2{
-	width: 70%;
+	width: 0;
 	height: 100%;
-	background-color: #c2c2c2;
+	background-color: #999;
 }
 .jineng_xian3{
-	width: 90%;
+	width: 0;
 	height: 100%;
-	background-color: #c2c2c2;
+	background-color: #999;
 }
 .jineng_xian4{
-	width: 85%;
+	width: 0;
 	height: 100%;
-	background-color: #c2c2c2;
+	background-color: #999;
 }
 .top_title1{
 	margin-top: 30px;
@@ -289,4 +287,30 @@
 .imginner:hover img{
 	transform: scale(1.2, 1.2);
 	transition: all 1s linear;
+}
+.leftBar{
+	width: 80px;
+	height: 200px;
+	background: red;
+	position: fixed;
+	left: 50%;
+	bottom: 200px;
+	/* display: none; */
+	margin-left: -660px;
+}
+.tips{
+	width: 100%;
+	height: 50px;
+	text-align: center;
+	line-height: 50px;
+	background: #ccc;
+	cursor: pointer;
+}
+.tips:hover{
+	background: #999;
+	color: #fff;
+}
+.tips.active{
+	background: #999;
+	color: #fff;
 }
