--- a/css/index.css
+++ b/css/index.css
@@ -170,6 +170,10 @@
 	font-size: 20px;
 	text-align: center;
 }
+.title a{
+	color: #000;
+	text-decoration: none;
+}
 .imginner1 img{
 	width: 100%;
 	height: 100%;
